--- a/index.html
+++ b/index.html
@@ -7,30 +7,34 @@
     <style>
         body{
             justify-content: center;
+            background-image: radial-gradient( circle farthest-corner at 10% 20%,  rgba(97,186,255,1) 0%, rgba(166,239,253,1) 90.1% );
             align-items: center;
             height: 100vh;
             display: flex;
         }
         .main-product{
-            height: 400px;
+            height: 500px;
             object-fit: cover;
             border: 2px solid black;
             border-radius: 5px;
-            box-shadow: 10px 10px 20px black;
             margin: auto;
             cursor: zoom-in;
+            box-shadow: 5px 10px 15px 3px grey;
         }
         .product-card{
-            height: 50px;
+            height: 60px;
             object-fit: cover;
             border: 1px solid black;
             border-radius: 10px;
             margin: 8px;
+            position: relative;
+            right: 15vh;
+            background-color: whitesmoke;
            cursor: pointer;
         }
         .product-card:hover{
-            border: 1px solid rgb(34, 150, 196);
-            box-shadow: 0 0 15px 2px skyblue;
+            border: 1px solid black(34, 150, 196);
+            box-shadow: 0 0  15px 1px grey;
         }
         .main-product-cointainer{
             margin-left: 30%;
@@ -42,17 +46,17 @@
         }
     </style>
 </head>
-<img src=""
-<body>
+
+<body>   
     <div  class="main-product-cointainer">
-        <img src="./img/1.jpg" class="product-card" onclick="ChangeImage('./img/1.jpg')"  alt="">
-        <img src="./img/2.jpg" class="product-card" onclick="ChangeImage('./img/2.jpg')"  alt="">
-        <img src="./img/3.jpg" class="product-card" onclick="ChangeImage('./img/3.jpg')"  alt="">
-        <img src="./img/4.jpg" class="product-card" onclick="ChangeImage('./img/4.jpg')"  alt="">
-        <img src="./img/5.jpg" class="product-card" onclick="ChangeImage('./img/5.jpg')"  alt="">
-        <img src="./img/6.jpg" class="product-card" onclick="ChangeImage('./img/6.jpg')"  alt="">
+        <img src="/img/1.png" class="product-card" onclick="ChangeImage('/img/1.png')"  alt="">
+        <img src="/img/2.png" class="product-card" onclick="ChangeImage('/img/2.png')"  alt="">
+        <img src="/img/3.png" class="product-card" onclick="ChangeImage('/img/3.png')"  alt="">
+        <img src="/img/4.png" class="product-card" onclick="ChangeImage('/img/4.png')"  alt="">
+        <img src="/img/5.png" class="product-card" onclick="ChangeImage('/img/5.png')"  alt="">
+        <img src="/img/6.png" class="product-card" onclick="ChangeImage('/img/6.png')"  alt="">
     </div>
-    <img src="./img/1.jpg" class="main-product" id="main-product" alt="">
+    <img src="/img/1.png" class="main-product" id="main-product" alt="">
     <script>
         function ChangeImage(imageName){
             const mainImage = document.getElementById("main-product");
