--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Product-Card_preview</title>
+    <title>Product-Card-design</title>
     <style>
         body{
             justify-content: center;
